--- a/sec.html
+++ b/sec.html
@@ -5,7 +5,7 @@
         <meta name="Author" content="lxrdk1773n">
         <meta name="description" content="Owned By lxrdk1773n" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="uhh/icon.jfif">
+        <link rel="icon" type="image/png" href="uhh/icon.jfif"type="image/x-icon" />
         <meta name="keywords" content="hacking, networking, cyber security">
         <meta name="robots" content="index, follow">
         <title>Owned By lxrdk1773n</title>
