--- a/sec.html
+++ b/sec.html
@@ -5,7 +5,7 @@
         <meta name="Author" content="lxrdk1773n">
         <meta name="description" content="Owned By lxrdk1773n" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="uhh/icon.jfif"type="image/x-icon" />
+        <link rel="icon" type="image/png" href="https://archive.is/5jSSu/a79dc358114e182931f8ef030710581a00378add.jpg"type="image/x-icon" />
         <meta name="keywords" content="hacking, networking, cyber security">
         <meta name="robots" content="index, follow">
         <title>Owned By lxrdk1773n</title>
@@ -14,7 +14,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-image: url(https://raw.githubusercontent.com/MDCCLXXIII/lol/refs/heads/main/ghost.gif);
+            background-image: url(https://raw.githubusercontent.com/MDCCLXXIII/lol/refs/heads/main/uhh/psy.webp);
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -116,7 +116,7 @@
                 task but a continuous process.
             </p>
         </div>
-        <audio src="https://raw.githubusercontent.com/MDCCLXXIII/lol/refs/heads/main/music.mp3" autoplay loop></audio>
+        <audio src="https://archive.org/download/orquestra-maldita-brazilian-phonk-320kbps/ORQUESTRA%20MALDITA%20%28BRAZILIAN%20PHONK%29_320kbps.mp3" autoplay loop></audio>
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <script>
             particlesJS('particles-js', {
