--- a/index2.html
+++ b/index2.html
@@ -74,7 +74,7 @@
       function playSound(){document.querySelector("audio").play()}
     </script>
   </head>
-  <body onclick="playSound()" onemouseover="playSound()">
+  <body onclick="playSound()" onmouseover="playSound()">
     <div class="bg">
       <audio src="https://archive.org/download/welcome-to-underground-mixtape/09.%20Aryon%2C%20Negro%20y%20Jayder%20-%20Chupasangres%20%28con%20Jayk%29%20-%20www.hhgroups.com.mp3" autoplay="true" loop="loop"></audio>
       <center>
