--- a/sec.html
+++ b/sec.html
@@ -14,10 +14,11 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-image: url(https://raw.githubusercontent.com/MDCCLXXIII/lol/refs/heads/main/uhh/psy.webp);
+            background-image: url(http://sukynet.us.to/uhh/psy.webp);
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
+            background-color: #000;
             font-family: 'Courier New', Courier, monospace;
             color: red;
             cursor: none;
