--- a/veo3/index.html
+++ b/veo3/index.html
@@ -11,7 +11,7 @@
   <title>Veo3 Prompt Generator</title>
   <link rel="stylesheet" href="/veo3/css/style.css">
 </head>
-<body oncontextmenu="return false" onclick="playSound()" onmouseover="playSound()">
+<body onclick="playSound()" onmouseover="playSound()">
   <audio src="https://archive.org/download/blackpink-stay-mv_202110/BLACKPINK%20STAY%20MV.mp3" autoplay loop
     type="audio/mp3"></audio>
   <div class="container">
