--- a/veo3/index.html
+++ b/veo3/index.html
@@ -19,7 +19,7 @@
     <p>Isi kolom di bawah ini untuk menghasilkan prompt yang terstruktur untuk Veo3.</p>
     <div class="form-container">
       <div class="form-column">
-        <label for="judul_scane">1. Judul Scane</label>
+        <label for="judul_scene">1. Judul Scene</label>
         <input type="text" id="judul_scane" placeholder="Contoh: Taman kota sore hari">
         <label for="deskripsi_karakter">2. Deskripsi Karakter Inti</label>
         <textarea id="deskripsi_karakter" rows="8"
