--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <ScRiPt>alert("受けた！")</sCrIpT>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<link rel="icon" href="https://e.top4top.io/p_3559ley411.png" type="image/x-icon">
+<link rel="icon" href="/uhh/img/%E3%83%9E%E3%82%AD%E3%83%9E.jpeg" type="image/x-icon">
 <meta name="author" content="lxrdk1773n">
 <meta name="description" content="不可能を可能にするのは努力だ">
 <meta name="keywords" content="おばけ, hacking, network, cybersecurity, darknet">
