--- a/sec.html
+++ b/sec.html
@@ -14,7 +14,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-image: url(http://sukynet.us.to/uhh/psy.webp);
+            background-image: url(https://j.top4top.io/p_36054agr71.gif);
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
